# loom

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
src/loom/: __init__.py  __main__.py  cli.py  main.py
src/loom/config/: __init__.py  mappings_insurance.yaml  mappings_operating.yaml  settings.example.toml  ticker_map.yaml
src/loom/core/clients/: __init__.py  fmp_client.py  outlook_client.py  sec_client.py  yahoo_client.py
src/loom/core/http/: __init__.py  cache.py  retry.py  transport.py
src/loom/core/resolution/: __init__.py  tickers.py
src/loom/core/summarization/: __init__.py  engine.py
src/loom/core/summarization/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
src/loom/domain/: __init__.py  models.py  schemas.py
src/loom/export/: __init__.py  excel_writer.py  json_writer.py
src/loom/fetchers/: __init__.py  financial.py  intelligence.py
src/loom/observability/: events.py  logging.py
src/loom/strategies/: __init__.py  base.py  insurance.py  operating.py
